--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap" rel="stylesheet">
+
+    <!-- Google tag (gtag.js) --> 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3NFPTHYG53"></script> 
+    <script> 
+      window.dataLayer = window.dataLayer || []; function gtag(){
+        dataLayer.push(arguments);
+      } gtag('js', new Date()); 
+      gtag('config', 'G-3NFPTHYG53'); 
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
