--- a/public/index.html
+++ b/public/index.html
@@ -31,13 +31,20 @@
 
   <!-- Google tag (gtag.js) -->
 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-929250397"></script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=AW-929250397"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'AW-929250397');
+  </script> -->
+  <script async="" src="https://www.googletagmanager.com/gtag/js?id=AW-929250397"></script>
+  <script>
+    function gtag(){
+      dataLayer.push(arguments)
+    }
+    window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","AW-929250397")
   </script>
 
 </head>
